# Aperture4

./: .ccls  .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  cmake_install.cmake  design.org  develop.Dockerfile  develop.Dockerfile.archlinux  license-header.txt  pusher_synchrotron.hpp  tigergpu  todo.org
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst  test.rst
docs/_static/: custom.css
docs/api/: index.rst
docs/api/core/: buffer.rst  index.rst  multi_array.rst  ndptr.rst
docs/api/data/: fields.rst  index.rst
docs/api/framework/: config.rst  data.rst  index.rst  params_store.rst  sim_environment.rst  system.rst
docs/docsrc/: 0-intro.rst  1-architecture.rst  1-customization.rst  1-framework.rst  1-setup.rst  1-units.rst  2-framework.rst  2-setup.rst  2.2-data.rst  3-config-file.rst  3-framework.rst  3.1-system.rst  3.2-data.rst  3.3-environment.rst  3.4-data-output.rst  3.5-dynamic-execution.rst  4-config-file.rst  4-two-stream.rst  7-systems-reference.rst  7.1-field-solvers.rst  7.2-particle-systems.rst  7.3-radiative-transfer.rst  7.4-grid-systems.rst  intro.rst  two-stream.md
problems/: CMakeLists.txt  Makefile  cmake_install.cmake
problems/Kink_Instability/: initial_condition.cpp
problems/Kink_Instability/src/: CMakeLists.txt  initial_condition.hpp  main.cpp
problems/Kink_instability/: initial_condition.cpp
problems/alfven_charge_starve/src/: CMakeLists.txt  initial_condition.cu  main.cpp
problems/alfven_quasi_1d/src/: CMakeLists.txt  initial_condition.cu  main.cpp  single_ptc_test.cpp
problems/alfven_wave/src/: CMakeLists.txt  main.cpp  main.cu
problems/bh_plasma/src/: CMakeLists.txt  initial_condition.cu  injector.cu  injector.h  main.cpp  test_particle.cpp
problems/bh_vacuum/src/: CMakeLists.txt  initial_condition.cu  main.cpp
problems/debug/: Makefile  cmake_install.cmake
problems/debug/src/: CMakeLists.txt  (+15 more)
problems/examples/: Makefile  cmake_install.cmake
problems/gr_2d_kerr_schild/: Makefile  cmake_install.cmake
problems/magnetar/: Makefile  cmake_install.cmake
problems/parker/: Makefile  cmake_install.cmake
problems/reconnection/: Makefile  cmake_install.cmake
problems/sph_wave_test/: CMakeLists.txt  Makefile  cmake_install.cmake
problems/two_stream/: Makefile  cmake_install.cmake
problems/vacuum_sph_wave_test/: CMakeLists.txt
src/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
src/algorithms/: boris_push.hpp  pushers.hpp  vay_push.hpp
src/components/: particle_structs.h  particles.h
src/core/: buffer.h  buffer.hpp  buffer_impl.cpp  buffer_impl.cu  buffer_impl.hip.cpp  buffer_impl.hpp  cached_allocator.cu  cached_allocator.hpp  constant_mem.cu  constant_mem.h  constant_mem.hip.cpp  constant_mem_func.h  cuda_control.h  data_adapter.h  domain_info.h  double_buffer.h  enum_types.h  exec_tags.h  gpu_error_check.h  gpu_translation_layer.h  grid.hpp  grid_helper.hpp  index.h  math.hpp  multi_array.h  multi_array.hpp  multi_array_exp.hpp  multi_array_impl.hpp  ndptr.h  ndptr.hpp  ndsubset.hpp  ndsubset_dev.hpp  params.cpp  params.h  particle_structs.h  particles.cpp  particles.cu  particles.h  particles.hip.cpp  particles_functions.cpp  (+10 more)
src/data/: curand_states.cu  curand_states.h  data_array.hpp  field_helpers.cpp  field_helpers.cu  field_helpers.h  fields.cpp  fields.h  fields.hpp  momentum_space.hpp  multi_array_data.hpp  particle_data.cpp  particle_data.h  phase_space.hpp  phase_space_vlasov.hpp  rng_states.cpp  rng_states.cu  rng_states.h  rng_states.hip.cpp  scalar_data.hpp  tracked_ptc.cpp  tracked_ptc.h  tracked_ptc.hip.cpp
src/framework/: config.h  data.h  environment.cpp  environment.h  environment.hpp  param_store.cpp  param_store.hpp  params_store.cpp  params_store.h  params_store.hpp  parse_params.hpp  system.h
src/systems/: compute_lorentz_factor.cpp  compute_lorentz_factor.cu  compute_lorentz_factor.h  compute_lorentz_factor.hip.cpp  compute_moments.cpp  compute_moments.h  compute_moments.hip.cpp  compute_moments_gr_ks.cpp  compute_moments_gr_ks.h  compute_moments_gr_ks.hip.cpp  compute_moments_gr_ks_impl.hpp  compute_moments_impl.hpp  data_exporter.cpp  data_exporter.h  data_exporter.hip.cpp  data_exporter_impl.hpp  domain_comm.cpp  domain_comm.h  domain_comm.hip.cpp  domain_comm.hpp  domain_comm_async.cpp  domain_comm_async.h  domain_comm_impl.hpp  field_solver.cpp  field_solver.cu  field_solver.h  field_solver.hip.cpp  field_solver_base.cpp  field_solver_base.h  field_solver_base.hip.cpp  field_solver_base_impl.hpp  field_solver_cartesian.cpp  field_solver_cartesian.h  field_solver_cartesian.hip.cpp  field_solver_cartesian_impl.hpp  field_solver_default.cu  field_solver_default.h  field_solver_explicit.cu  field_solver_explicit.h  field_solver_gr_ks.cpp  (+98 more)
src/utils/: binary_search.h  buffer.h  buffer_impl.cpp  buffer_impl.hpp  double_buffer.h  for_each_dual.hpp  gauss_quadrature.h  hdf_wrapper.cpp  hdf_wrapper.h  hdf_wrapper_impl.hpp  index.h  index.hpp  indexable.hpp  interpolation.hpp  interpolation_simd.hpp  kernel_helper.hpp  logger.cpp  logger.h  morton.h  mpi_helper.cpp  mpi_helper.h  ndptr.h  nonown_ptr.hpp  range.hpp  singleton_holder.h  stagger.h  timer.cpp  timer.h  type_traits.hpp  util_functions.h  vec.hpp  vec3.h
tests/: CMakeLists.txt  Makefile  cmake_install.cmake  compare_new_pusher.cpp  compare_new_pusher_sph.cpp  mem_layout.cpp  mock_loop.cu  perf_deposit.cpp  perf_deposit3d.cpp  perf_gr_update.cpp  perf_ptc_update.cpp  perf_ptc_update_cpu.cpp  perf_ptc_update_mpi.cpp  perf_pusher.cpp  perf_pusher3d.cpp  performance_pusher.cpp  playground.cpp  playground.cu  test.cpp  test_IC_cooling.cu  test_buffer.cpp  test_cam_network.cpp  test_config.cpp  test_cusparse.cu  test_cyclotron_cooling.cu  test_exporter.cpp  test_exporter_mpi.cpp  test_exporter_snapshot.cpp  test_exporter_snapshot.hip.cpp  test_fields.cpp  test_frontier_mpi.hip.cpp  test_gaussian_quadrature.cpp  test_gr_ks_sph.cpp  test_gr_pusher.cpp  test_grid.cu  test_interp.cpp  test_inverse_compton.cpp  test_inverse_compton.hip.cpp  test_lorentz.cpp  test_math.cu  (+23 more)
(+308 files in other folders)
