if(lib_only)
  add_custom_target(problems)
else()
  add_custom_target(problems ALL)
endif()

add_subdirectory(pulsar)
add_subdirectory(magnetar)
add_subdirectory(monopole)
add_subdirectory(alfven_wave)
add_subdirectory(alfven_charge_starve)
add_subdirectory(vacuum_sph_wave_test)
add_subdirectory(plasma_sph_wave_test)
