if(lib_only)
  add_custom_target(problems)
else()
  add_custom_target(problems ALL)

add_subdirectory(examples)
add_subdirectory(debug)
add_subdirectory(two_stream)
add_subdirectory(reconnection)
add_subdirectory(gr_2d_kerr_schild)
# add_subdirectory(pulsar)
# add_subdirectory(magnetar)
# add_subdirectory(monopole)
# add_subdirectory(alfven_wave)
# add_subdirectory(alfven_charge_starve)
# add_subdirectory(alfven_quasi_1d)
# add_subdirectory(polar_cap)
# add_subdirectory(scaling)
# add_subdirectory(vacuum_sph_wave_test)
# add_subdirectory(sph_wave_test)
# add_subdirectory(wave_scattering)

endif()
